@@ -1,3 +1,10 @@
+2007-05-26  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-applet-frame.c: (panel_applet_frame_set_flags_from_any):
+	update the background if a handle was added. Fix initial background
+	not working for handles.
+	Fix bug #343168
+
 2007-05-25  Vincent Untz  <vuntz@gnome.org>
 
 	* panel-icon-names.h: add new icons
